--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ h1 {
     <img src="https://lhstestsite.files.wordpress.com/2016/03/cropped-lakelandlogo.png" width="100px"></img>
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top"><b>COMING SOON</b></h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
   </div>
