--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>LHS Reunion</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -26,7 +26,7 @@ h1 {
     <img src="https://lhstestsite.files.wordpress.com/2016/03/cropped-lakelandlogo.png" width="100px"></img>
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <h1 class="w3-jumbo w3-animate-top"><b><center>COMING SOON</center></b></h1>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
   </div>
