--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Font-Size: 16px;
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("https://i.imgur.com/7rTmZ5S.jpg");
+  background-image: url("/header.png");
   min-height: 75%;
 }
 
