--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>GIGI ALLEN</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="https://i.imgur.com/MY0RA39.png" type="image/x-icon"> 
+  <link rel="shortcut icon" href="/favicon.ico"> 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
