--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ Font-Size: 16px;
 <!-- Purchase Container -->
 <div class="w3-container" id="purchase">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">USED PANTIES, SOCKS, STOCKINGS, & PANTYHOSE</h5>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxzJuepHYTTASak7-ssZatM9rCCbP5XYImvg&usqp=CAU"></img>
+      <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">USED PANTIES, SOCKS, STOCKINGS, & PANTYHOSE</h5>
     <p class="w3-center">BASE PRICE FOR ALL ITEMS
     <br>$25.00 + FREE SHIPPING</p>
     <p class="w3-center">+ $10.00 Per Extra Day of Wear<br>+ $20.00 for Urine, Skidmarks<br>+ $30.00 for Menstrual Stains</p>
