--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@ Font-Size: 16px;
   min-height: 75%;
 }
 
+.pantyhose {
+  background-position: center;
+  background-size: cover;
+  background-image: url("https://thumbs.dreamstime.com/b/woman-wearing-black-tights-stylish-shoes-background-closeup-legs-woman-wearing-black-tights-stylish-shoes-pink-171053527.jpg");
+  min-height: 75%;
+}
+      
 .menu {
   display: none;
 }
@@ -105,7 +112,7 @@ Font-Size: 16px;
 <!-- Purchase Container -->
 <div class="w3-container" id="purchase">
   <div class="w3-content" style="max-width:700px">
-    <img src="https://thumbs.dreamstime.com/b/woman-wearing-black-tights-stylish-shoes-background-closeup-legs-woman-wearing-black-tights-stylish-shoes-pink-171053527.jpg"></img>
+        <header class="bgimg w3-display-container"></header>
       <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">USED PANTIES, SOCKS, STOCKINGS, & PANTYHOSE</h5>
     <p class="w3-center">BASE PRICE FOR ALL ITEMS
     <br>$25.00 + FREE SHIPPING</p>
