--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Font-Size: 16px;
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">WHAT GETS ME OFF</span></h5>
     <div class="w3-center">
-      <p>• Foot Fetish • High Heel & Boot Fetish • Female Supremacy • FinDomme • Servitude • Worship • Humiliation • SPH • Forced Feminization • Sissification • Pantyhose • Stockings • Roleplay • Giantess • Crush Fetish • Latex • Leather • Ass Play • Armpits • JOI • CEI • Cuckolding • Edging • Ruined Orgasms • Vore •</p>
+      <p>• Foot Fetish • High Heel & Boot Fetish • Female Supremacy • FinDomme • Servitude • Worship • Humiliation • Forced Feminization • Sissification • Pantyhose • Stockings • Roleplay • Giantess • Crush Fetish • Latex • Leather • Armpits • JOI • CEI • Cuckolding • Edging • Ruined Orgasms • Vore •</p>
           <p class="w3-center">Does something else pique your fancy?<br>I enjoy experimenting and trying new things.</p>
            <p class="w3-center"><a class="w3-bar-item w3-button" href="mailto:gigiallenx@gmail.com?subject=Kink Content Request"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
     </div>
