--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 body, h1, h2, h3, h4, h5, h6, html {
   height: 100%;
   Font-Family: 'Anton', Sans-Serif;
+  background-color: #f7cde4;}
 }
 
 p {
