--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ body, h1, h2, h3, h4, h5, h6, html {
   background-color: #f7cde4;}
 }
 
+body {background-color: f7cde4;}
+      
+      
 p {
 Font-Family: 'Signika', Sans-Serif;
 Font-Size: 16px;
