--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@ Font-Size: 16px;
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT YOUR GODDESS</span></h5>
-    <p class="w3-center">Welcome to my dungeon, pet. <br>
+    <p class="w3-center">Welcome to my dungeon, pet. <br><br>
 I am Goddess Gigi, the 6'1" Giantess Glamazon, and I'm here to fuck you up.
 <br><br>
-I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires.
-<br>I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
-          
-Why haven't you invested in me yet? Get to it, slut!</p><p>• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
+I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires. I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
+          <br><br>
+Why haven't you invested in me yet? <br><br>Get to it, slut!</p><p>• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
     <hr>
     <div class="w3-center">
       <p><i>“Woman's power lies in man's passion, and she knows how to use it, if man doesn't understand himself. He has only one choice: to be the tyrant over or the slave of woman.”</i></p>
