--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
       type="image/png" 
       href="/favicon.ico" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-<link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&family=Sura:wght@400;700&display=swap" rel="stylesheet">
 <style>
+
 body, h1, h2, h3, h4, h5, h6, html {
   height: 100%;
-  Font-Family: 'Anton', Sans-Serif;
-}     
-      
+   font-family: 'Fjalla One', sans-serif;
+}  
+
 p {
-Font-Family: 'Signika', Sans-Serif;
-Font-Size: 16px;
+    font-family: 'Sura', serif;
+    font-Size: 16px;
 }
 
 .bgimg {
@@ -26,6 +27,14 @@ Font-Size: 16px;
   background-size: cover;
   background-image: url("/header.png");
   min-height: 75%;
+}
+
+.button {
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
       
 .menu {
@@ -73,11 +82,14 @@ Font-Size: 16px;
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT YOUR GODDESS</span></h5>
     <p class="w3-center">Welcome to my dungeon, pet. <br><br>
-I am Goddess Gigi, the 6'1" Giantess Glamazon, and I'm here to fuck you up.
-<br><br>
-I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires. I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
-          <br><br>
-Why haven't you invested in me yet? <br><br>Get to it, slut!</p><p>• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
+	I am <b>Goddess Gigi</b>, the <b>6'1" Giantess Glamazon</b>, and I'm here to fuck you up.
+	<br><br>
+	I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires. I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
+	<br><br>
+	Why haven't you invested in me yet?
+	<br><br>
+	Get to it, slut!</p>
+	<p>• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
     <hr>
     <div class="w3-center">
       <p><i>“Woman's power lies in man's passion, and she knows how to use it, if man doesn't understand himself. He has only one choice: to be the tyrant over or the slave of woman.”</i></p>
