--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ p {
 	Why haven't you invested in me yet?
 	<br>
 	Get to it, slut!</p>
-	<p>• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
+	<p class="w3-center">• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
     <hr>
     <div class="w3-center">
       <p><i>“Woman's power lies in man's passion, and she knows how to use it, if man doesn't understand himself. He has only one choice: to be the tyrant over or the slave of woman.”</i></p>
