--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@ p {
   </div><BR><BR><BR>
 </div>
 
+<!-- Referrals Container -->
+<div class="w3-container" id="referrallinks">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">REFERRAL LINKS</span></h5>
+    <p class="w3-center"><a href="https://onlyfans.com/?ref=10522218" class="w3-bar-item w3-button">ONLYFANS</a> • <a href="https://www.sextpanther.com/apply?id=85737" class="w3-bar-item w3-button">SEXTPANTHER</a> • <a href="https://iwantclips.com/home/model_signup/67a17782d68e17fe71810a1e683583fb" class="w3-bar-item w3-button">IWANTCLIPS</a>
+  </div><BR><BR><BR>
+</div>
+
 <!-- End page content -->
 </div>
 
