--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ p {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/header.png");
+  background-image: url("/IMG_3862.jpeg");
   min-height: 75%;
 }
 
