--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-<title>GIGI ALLEN</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" 
-      type="image/png" 
-      href="/favicon.ico" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&family=Sura:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
 
 body, h1, h2, h3, h4, h5, h6, html {
   height: 100%;
@@ -21,30 +25,30 @@ p {
     font-family: 'Sura', serif;
     font-Size: 16px;
 }
-
+.w3-row-padding img {margin-bottom: 12px}
 .bgimg {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("/IMG_3862.jpeg");
-  min-height: 75%;
-}
-
-.button {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 600;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-}
-      
-.menu {
-  display: none;
+  background-image: url('https://github.com/gigiallen/gigiallen.github.io/blob/master/IMG_3862.jpeg?raw=true');
+  min-height: 100%;
 }
 </style>
 <body>
 
+<!-- Sidebar with image -->
+<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+  <div class="bgimg"></div>
+</nav>
+
+
+
+
+
+<!-- Page Content -->
+<div class="w3-main" style="margin-left:40%">
 <!-- Links (sit on top) -->
-<div class="w3-top">
+<div>
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s3">
       <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
@@ -60,38 +64,41 @@ p {
     </div>
   </div>
 </div>
+  <!-- Header -->
+  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+    <h1 class="w3-jumbo"><b>GIGI ALLEN</b></h1>
+    <p>I am Goddess Gigi, the 6'1" Giantess Glamazon, and I'm here to fuck you up.</p>
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+  </header>
 
-<!-- Header with image -->
-<header class="bgimg w3-display-container" id="home">
-  <!-- <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <span class="w3-tag">Open from 6am to 5pm</span>
-  </div> -->
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:90px">GIGI ALLEN</span>
+  <!-- Portfolio Section -->
+  <div class="w3-padding-32 w3-content w3-center" id="portfolio">
+
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div>
+        <img src="https://github.com/gigiallen/gigiallen.github.io/blob/master/IMG_3855.jpeg?raw=true" style="width:50%">
+      </div>
+
+    <!-- End photo grid -->
+    </div>
+  <!-- End Portfolio Section -->
   </div>
-  <!-- <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">15 Adr street, 5015</span>
-  </div> -->
-</header>
 
-<!-- Add a background color and large text to the whole page -->
-<div class="w3-sand w3-grayscale w3-large">
-
-<!-- About Container -->
+ <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT YOUR GODDESS</span></h5>
-    <p class="w3-center">Welcome to my dungeon, pet. <br><br>
-	I am Goddess Gigi, the 6'1" Giantess Glamazon, and I'm here to fuck you up.
-	<br><br>
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">ABOUT YOUR GODDESS</span></h5>
+    <p>Welcome to my dungeon, pet. <br><br>
 	I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires. I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
 	<br><br>
 	Why haven't you invested in me yet?
 	<br>
 	Get to it, slut!</p>
-	<p class="w3-center">• Tattooed Bimbo • High Femme Domme • 6’1” Giantess • 36DD Curvy Queen • Size 11 Feet •</p>
+	<p>•&nbsp;&nbsp;  Tattooed Bimbo<br>•&nbsp;&nbsp;  High Femme Domme<br>•&nbsp;&nbsp;  6’1” Giantess<br>•&nbsp;&nbsp;  36DD Curvy Queen<br>•&nbsp;&nbsp;  Size 11 Feet</p>
     <hr>
-    <div class="w3-center">
+    <div>
       <p><i>“Woman's power lies in man's passion, and she knows how to use it, if man doesn't understand himself. He has only one choice: to be the tyrant over or the slave of woman.”</i></p>
       <p>― Leopold von Sacher-Masoch, Venus in Furs</p>
     </div>
@@ -101,11 +108,11 @@ p {
 <!-- Kinks Container -->
 <div class="w3-container" id="kinks">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">WHAT GETS ME OFF</span></h5>
-    <div class="w3-center">
-      <p>• Foot Fetish • High Heel & Boot Fetish • Female Supremacy • FinDomme • Servitude • Worship • Humiliation • Forced Feminization • Sissification • Pantyhose • Stockings • Roleplay • Giantess • Crush Fetish • Latex • Leather • Armpits • JOI • CEI • Cuckolding • Edging • Ruined Orgasms • Vore •</p>
-          <p class="w3-center">Does something else pique your fancy?<br>I enjoy experimenting and trying new things.</p>
-           <p class="w3-center"><a class="w3-bar-item w3-button" href="mailto:gigiallenx@gmail.com?subject=Kink Content Request"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">WHAT GETS ME OFF</span></h5>
+    <div>
+      <p>•&nbsp;&nbsp; Foot Fetish<br>•&nbsp;&nbsp; High Heel & Boot Fetish<br>•&nbsp;&nbsp; Female Supremacy<br>•&nbsp;&nbsp; FinDomme<br>•&nbsp;&nbsp; Servitude<br>•&nbsp;&nbsp; Worship<br>•&nbsp;&nbsp; Humiliation<br>•&nbsp;&nbsp; Forced Feminization<br>•&nbsp;&nbsp; Sissification<br>•&nbsp;&nbsp; Pantyhose<br>•&nbsp;&nbsp; Stockings<br>•&nbsp;&nbsp; Roleplay<br>•&nbsp;&nbsp; Giantess<br>•&nbsp;&nbsp; Crush Fetish<br>•&nbsp;&nbsp; Latex<br>•&nbsp;&nbsp; Leather<br>•&nbsp;&nbsp; Armpits<br>•&nbsp;&nbsp; JOI<br>•&nbsp;&nbsp; CEI<br>•&nbsp;&nbsp; Cuckolding<br>•&nbsp;&nbsp; Edging<br>•&nbsp;&nbsp; Ruined Orgasms<br>•&nbsp;&nbsp; Vore</p>
+          <p>Does something else pique your fancy?<br>I enjoy experimenting and trying new things.</p>
+           <p><a href="mailto:gigiallenx@gmail.com?subject=Kink Content Request"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
     </div>
   </div>
 </div>
@@ -113,36 +120,35 @@ p {
 <!-- Find Me Container -->
 <div class="w3-container" id="findme">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">WHERE TO FIND ME</span></h5>
-    <p class="w3-center"><a href="https://iwantclips.com/store/926965/gigi_allen" class="w3-bar-item w3-button">WATCH</a> • <a href="https://onlyfans.com/gigi_allen" class="w3-bar-item w3-button">WORSHIP</a> • <a href="https://www.sextpanther.com/GigiAllen" class="w3-bar-item w3-button">SEXT</a> • <a href="https://cash.app/$gigiallenx" class="w3-bar-item w3-button">TRIBUTE</a><br>
-   <a class="w3-bar-item w3-button" href="https://www.instagram.com/gigi_allenx/">INSTAGRAM</a> • <a class="w3-bar-item w3-button" href="https://twitter.com/gigi_allenx">TWITTER</a></p>
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">WHERE TO FIND ME</span></h5>
+    <p><a href="https://iwantclips.com/store/926965/gigi_allen">•&nbsp;&nbsp;  WATCH</a><br><a href="https://onlyfans.com/gigi_allen">•&nbsp;&nbsp; WORSHIP</a><br><a href="https://www.sextpanther.com/GigiAllen">•&nbsp;&nbsp;  SEXT</a> <br><a href="https://cash.app/$gigiallenx">•&nbsp;&nbsp;  TRIBUTE</a><br><a href="https://www.instagram.com/gigi_allenx/">•&nbsp;&nbsp;  INSTAGRAM</a></p>
   </div><BR><BR><BR>
 </div>
 
 <!-- Purchase Container -->
 <div class="w3-container" id="purchase">
   <div class="w3-content" style="max-width:700px">
-      <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">USED PANTIES, SOCKS, STOCKINGS, & PANTYHOSE</h5>
-    <p class="w3-center">BASE PRICE FOR ALL ITEMS
+      <h5 class="w3-padding-64"><span class="w3-tag w3-wide">USED CLOTHING</h5>
+    <p>BASE PRICE FOR ALL ITEMS
     <br>$25.00 + FREE SHIPPING</p>
-    <p class="w3-center">+ $10.00 Per Extra Day of Wear<br>+ $20.00 for Urine, Skidmarks<br>+ $30.00 for Menstrual Stains</p>
-        <p class="w3-center"><a class="w3-bar-item w3-button" href="mailto:gigiallenx@gmail.com?subject=Purchasing Items"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
-            <p class="w3-center"><i class="fa fa-paypal"></i>&nbsp;&nbsp;Payable via PayPal Invoice</p>
+    <p>+ $10.00 Per Extra Day of Wear<br>+ $20.00 for Urine, Skidmarks<br>+ $30.00 for Menstrual Stains</p>
+        <p><a href="mailto:gigiallenx@gmail.com?subject=Purchasing Items"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
+            <p><i class="fa fa-paypal"></i>&nbsp;&nbsp;Payable via PayPal Invoice</p>
   </div><BR><BR><BR>
 </div>
 
 <!-- Referrals Container -->
 <div class="w3-container" id="referrallinks">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">REFERRAL LINKS</span></h5>
-    <p class="w3-center"><a href="https://onlyfans.com/?ref=10522218" class="w3-bar-item w3-button">ONLYFANS</a> • <a href="https://www.sextpanther.com/apply?id=85737" class="w3-bar-item w3-button">SEXTPANTHER</a> • <a href="https://iwantclips.com/home/model_signup/67a17782d68e17fe71810a1e683583fb" class="w3-bar-item w3-button">IWANTCLIPS</a>
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">REFERRAL LINKS</span></h5>
+    <p><a href="https://onlyfans.com/?ref=10522218">•&nbsp;&nbsp;  ONLYFANS</a><br><a href="https://www.sextpanther.com/apply?id=85737">•&nbsp;&nbsp;  SEXTPANTHER</a><br><a href="https://iwantclips.com/home/model_signup/67a17782d68e17fe71810a1e683583fb">•&nbsp;&nbsp;  IWANTCLIPS</a>
   </div><BR><BR><BR>
 </div>
 
 <!-- End page content -->
 </div>
-
-
+  
+  
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-large">
   <p class="w3-center"><span class="w3-tag w3-wide">© GIGI ALLEN 2021</span></p>
@@ -164,6 +170,21 @@ function openMenu(evt, menuName) {
   evt.currentTarget.firstElementChild.className += " w3-dark-grey";
 }
 document.getElementById("myLink").click();
+</script>
+  
+<!-- END PAGE CONTENT -->
+</div>
+
+<script>
+// Open and close sidebar
+function openNav() {
+  document.getElementById("mySidebar").style.width = "60%";
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function closeNav() {
+  document.getElementById("mySidebar").style.display = "none";
+}
 </script>
 
 </body>
