--- a/index.html
+++ b/index.html
@@ -1,8 +1,142 @@
+<!DOCTYPE html>
+<html>
+<title>Goddess Gigi</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Fjalla+One&family=Sura:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+a:link {
+  text-decoration: none;
+}
 
-Result Size: 1746 x 617
+a:hover {
+  color: red;
+}
+
+body, h1, h2, h3, h4, h5, h6, html {
+  height: 100%;
+   font-family: 'Fjalla One', sans-serif;
+}  
+
+p {
+    font-family: 'Sura', serif;
+    font-Size: 16px;
+}
+.w3-row-padding img {margin-bottom: 12px}
+.bgimg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://github.com/gigiallen/gigiallen.github.io/blob/master/IMG_3862.jpeg?raw=true');
+  min-height: 100%;
+}
+</style>
+<body>
+
+<!-- Sidebar with image -->
+<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+  <div class="bgimg"></div>
+</nav>
+
+
+
+
+
+<!-- Page Content -->
+<div class="w3-main" style="margin-left:40%">
+<!-- Links (sit on top) -->
+<div>
+  <div class="w3-row w3-padding w3-black">
+    <div class="w3-col s3">
+      <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="#kinks" class="w3-button w3-block w3-black">KINKS</a>
+    </div>
+    <div class="w3-col s3">
+      <a href="#findme" class="w3-button w3-block w3-black">FIND ME</a>
+    </div>
+        <div class="w3-col s3">
+      <a href="#purchase" class="w3-button w3-block w3-black">PURCHASE</a>
+    </div>
+  </div>
+</div>
+  <!-- Header -->
+  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+    <h1 class="w3-jumbo"><b>GIGI ALLEN</b></h1>
+    <p>I am Goddess Gigi, the 6'1" Giantess Glamazon, and I'm here to fuck you up.</p>
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+  </header>
+
+  <!-- Portfolio Section -->
+  <div class="w3-padding-32 w3-content w3-center" id="portfolio">
+
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div>
+        <img src="https://github.com/gigiallen/gigiallen.github.io/blob/master/IMG_3855.jpeg?raw=true" style="width:50%">
+      </div>
+
+    <!-- End photo grid -->
+    </div>
+  <!-- End Portfolio Section -->
+  </div>
+
+ <!-- About Container -->
+<div class="w3-container" id="about">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">ABOUT YOUR GODDESS</span></h5>
+    <p>Welcome to my dungeon, pet. <br><br>
+	I'm both cruel and sensual–and way out of your league. A Dominatrix extraordinaire, I'm your dream girl who will have you eating out of the palm of my hand, addicted to the pain and pleasure I provide. You're just a toy for me to use, and I can't wait to tease and play with you. I'll be the one to hold all your perverted secrets close and fulfill those desires. I can teach you to worship me and train you to serve me or regularly remind you what a little loser you are.
+	<br><br>
+	Why haven't you invested in me yet?
+	<br>
+	Get to it, slut!</p>
+	<p>•&nbsp;&nbsp;  Tattooed Bimbo<br>•&nbsp;&nbsp;  High Femme Domme<br>•&nbsp;&nbsp;  6’1” Giantess<br>•&nbsp;&nbsp;  36DD Curvy Queen<br>•&nbsp;&nbsp;  Size 11 Feet</p>
+    <hr>
+    <div>
+      <p><i>“Woman's power lies in man's passion, and she knows how to use it, if man doesn't understand himself. He has only one choice: to be the tyrant over or the slave of woman.”</i></p>
+      <p>― Leopold von Sacher-Masoch, Venus in Furs</p>
+    </div>
+  </div>
+</div>
+
+<!-- Kinks Container -->
+<div class="w3-container" id="kinks">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">WHAT GETS ME OFF</span></h5>
+    <div>
+      <p>•&nbsp;&nbsp; Foot Fetish<br>•&nbsp;&nbsp; High Heel & Boot Fetish<br>•&nbsp;&nbsp; Female Supremacy<br>•&nbsp;&nbsp; FinDomme<br>•&nbsp;&nbsp; Servitude<br>•&nbsp;&nbsp; Worship<br>•&nbsp;&nbsp; Humiliation<br>•&nbsp;&nbsp; Forced Feminization<br>•&nbsp;&nbsp; Sissification<br>•&nbsp;&nbsp; Pantyhose<br>•&nbsp;&nbsp; Stockings<br>•&nbsp;&nbsp; Roleplay<br>•&nbsp;&nbsp; Giantess<br>•&nbsp;&nbsp; Crush Fetish<br>•&nbsp;&nbsp; Latex<br>•&nbsp;&nbsp; Leather<br>•&nbsp;&nbsp; Armpits<br>•&nbsp;&nbsp; JOI<br>•&nbsp;&nbsp; CEI<br>•&nbsp;&nbsp; Cuckolding<br>•&nbsp;&nbsp; Edging<br>•&nbsp;&nbsp; Ruined Orgasms<br>•&nbsp;&nbsp; Vore</p>
+          <p>Does something else pique your fancy?<br>I enjoy experimenting and trying new things.</p>
+           <p><a href="mailto:gigiallenx@gmail.com?subject=Kink Content Request"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
+    </div>
+  </div>
+</div>
+
+<!-- Find Me Container -->
+<div class="w3-container" id="findme">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-padding-64"><span class="w3-tag w3-wide">WHERE TO FIND ME</span></h5>
+    <p><a href="https://iwantclips.com/store/926965/gigi_allen">•&nbsp;&nbsp;  WATCH</a><br><a href="https://onlyfans.com/gigi_allen">•&nbsp;&nbsp; WORSHIP</a><br><a href="https://www.sextpanther.com/GigiAllen">•&nbsp;&nbsp;  SEXT</a> <br><a href="https://cash.app/$gigiallenx">•&nbsp;&nbsp;  TRIBUTE</a><br><a href="https://www.instagram.com/gigi_allenx/">•&nbsp;&nbsp;  INSTAGRAM</a></p>
   </div><BR><BR><BR>
 </div>
-​
+
+<!-- Purchase Container -->
+<div class="w3-container" id="purchase">
+  <div class="w3-content" style="max-width:700px">
+      <h5 class="w3-padding-64"><span class="w3-tag w3-wide">USED CLOTHING</h5>
+    <p>BASE PRICE FOR ALL ITEMS
+    <br>$25.00 + FREE SHIPPING</p>
+    <p>+ $10.00 Per Extra Day of Wear<br>+ $20.00 for Urine, Skidmarks<br>+ $30.00 for Menstrual Stains</p>
+        <p><a href="mailto:gigiallenx@gmail.com?subject=Purchasing Items"><i class="fa fa-envelope-o"></i>&nbsp;&nbsp;Send me your request</a></p>
+            <p><i class="fa fa-paypal"></i>&nbsp;&nbsp;Payable via PayPal Invoice</p>
+  </div><BR><BR><BR>
+</div>
+
 <!-- Referrals Container -->
 <div class="w3-container" id="referrallinks">
   <div class="w3-content" style="max-width:700px">
@@ -10,10 +144,10 @@ Result Size: 1746 x 617
     <p><a href="https://onlyfans.com/?ref=10522218">•&nbsp;&nbsp;  ONLYFANS</a><br><a href="https://www.sextpanther.com/apply?id=85737">•&nbsp;&nbsp;  SEXTPANTHER</a><br><a href="https://iwantclips.com/home/model_signup/67a17782d68e17fe71810a1e683583fb">•&nbsp;&nbsp;  IWANTCLIPS</a>
   </div><BR><BR><BR>
 </div>
-​
+
 <!-- End page content -->
 </div>
-​
+
 <script>
 // Tabbed Menu
 function openMenu(evt, menuName) {
@@ -34,8 +168,18 @@ document.getElementById("myLink").click();
   
 <!-- END PAGE CONTENT -->
 </div>
-​
+
 <script>
 // Open and close sidebar
 function openNav() {
   document.getElementById("mySidebar").style.width = "60%";
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function closeNav() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
+
+</body>
+</html>
