--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ p {
 <div class="w3-container" id="findme">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-padding-64"><span class="w3-tag w3-wide">WHERE TO FIND ME</span></h5>
-    <p><a href="https://iwantclips.com/store/926965/gigi_allen">•&nbsp;&nbsp;  WATCH</a><br><a href="https://onlyfans.com/gigi_allen">•&nbsp;&nbsp; WORSHIP</a><br><a href="https://www.sextpanther.com/GigiAllen">•&nbsp;&nbsp;  SEXT</a> <br><a href="https://cash.app/$gigiallenx">•&nbsp;&nbsp;  TRIBUTE</a><br><a href="https://www.instagram.com/gigi_allenx/">•&nbsp;&nbsp;  INSTAGRAM</a></p>
+    <p><a href="https://iwantclips.com/store/926965/gigi_allen">•&nbsp;&nbsp;  WATCH</a><br><a href="https://onlyfans.com/gigi_allen">•&nbsp;&nbsp; WORSHIP</a><br><a href="https://www.sextpanther.com/GoddessGigi">•&nbsp;&nbsp;  SEXT</a> <br><a href="https://cash.app/$gigiallenx">•&nbsp;&nbsp;  TRIBUTE</a><br><a href="https://www.instagram.com/gigi_allenx/">•&nbsp;&nbsp;  INSTAGRAM</a></p>
   </div><BR><BR><BR>
 </div>
 
